2005-07-20  Dennis Cranston <dennis_cranston@yahoo.com>

	* gnomine/gnomine.c: Add a mnemonic to the new game button.

2005-07-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c: Do the inline thing properly. The glib docs are not
	just "vague", but actively misleading.

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* gnomine.c: Make ui_description readonly.

2005-07-10  Richard Hoelscher  <rah@rahga.com>

	* gnomine.c (show_scores): Set dialog style as ascending time (#309958)

2005-06-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Commented out some experimental sound code. It
	will be deleted later when I figure out how to play overlapping 
	copies of the same sound.

2005-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Make sure the New Game button actually starts a new
	game.

2005-05-27  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (show_scores): Use a message dialog for non top-ten
	games. Just like Same GNOME. Also hook up the quit button so it
	does the right thing.

2005-05-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Debrand: GNOME Mines -> Mines.
	(show_scores): First steps towards quit/new games actions on the
	end-of game high-scores dialog.

2005-05-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c: Create an unchecked version of cell_idx and make it
	inline. Use it where we call often and can guarantee the range.
	(gtk_minefield_set_size): Consolidate the size checking at the
	beginning.

2005-05-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Make sure that the correct level always appears in
	the scores dialog, even when we don't set a high score.

	* minefield.c: Refactoring the calls to gtk_minefield_win into
	gtk_minefield_check_field. Cleaned up the declarations and added
	some comments. "secs" has been removed. Removed all use of inline,
	we have no need of speed and it was adding 4% to the size of the